@@ -68,7 +68,8 @@ struct TimedAudioBuffers
 enum VideoFrameType
 {
 	VIDEO_FRAME_TYPE_2D,
-	VIDEO_FRAME_TYPE_3D_LEFT_RIGHT
+	VIDEO_FRAME_TYPE_3D_LEFT_RIGHT,
+	VIDEO_FRAME_TYPE_3D_TOP_BOTTOM
 };
 
 enum Eyes
