@@ -47,6 +47,13 @@ VideoDecoder::video (shared_ptr<const Image> image, bool same, VideoContent::Fra
 		Video (image->crop (Crop (half, 0, 0, 0), true), EYES_RIGHT, same, frame);
 		break;
 	}
+	case VIDEO_FRAME_TYPE_3D_TOP_BOTTOM:
+	{
+		int const half = image->size().height / 2;
+		Video (image->crop (Crop (0, 0, 0, half), true), EYES_LEFT, same, frame);
+		Video (image->crop (Crop (0, 0, half, 0), true), EYES_RIGHT, same, frame);
+		break;
+	}
 	}
 	
 	_video_position = frame + 1;
